# conexus

./: .env.example  .gitignore  AGENTS.md  AGENT_OS_README.md  CLAUDE.md  GEMINI.md  README.md  conexus.adaptation.code-workspace  docker-compose.yml
agentor/: README.md  pyproject.toml
agentor/agentor_runtime/: executor.py  models.py
agentor/app/: __init__.py  executor.py  models.py
agentor/examples/: run_ontogony_cms.py  run_ontogony_cms_mock.py
agentor/tests/: conftest.py  test_conexus_client.py  test_executor.py  test_filesystem_tool_client.py  test_ontogony_workflow.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: cli.py  main.py
backend/static_config/: model_aliases.yaml
backend/tests/: conftest.py  test_activation_partial_unique_db.py  test_adaptation_proxy_service.py  test_admin_adaptation_proxy.py  test_admin_adapter_profiles_registry.py  test_admin_auth.py  test_admin_csrf_policy.py  test_admin_dashboard.py  test_admin_login_rate_limiter.py  test_admin_project_limits.py  test_admin_projects.py  test_admin_providers.py  test_admin_requests.py  test_admin_routing.py  test_admin_usage.py  test_admin_users_and_audit.py  test_anthropic_adapter.py  test_contract_assets.py  test_core_errors.py  test_encryption_key_requirements.py  test_gateway_endpoint.py  test_gateway_fallback.py  test_gateway_runtime_config_service.py  test_health.py  test_internal_adapter_profile_activations.py  test_internal_adapter_profile_observability.py  test_internal_adapter_profiles.py  test_m5_persistence_models.py  test_main_security.py  test_model_alias_config.py  test_openai_adapter.py  test_pricing.py  test_process_worker_guard.py  test_project_key_service.py  (+5 more)
(+364 files in other folders)
